--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "rust-xfinal"
 version = "0.8.11"
 edition = "2021"
 license = "MIT OR Apache-2.0"
-description = "A safe and simplely used web framework"
+description = "A safe and simplely used web server framework"
 homepage = "https://github.com/xmh0511/rust-xfinal"
 readme = "README.md"
 repository = "https://github.com/xmh0511/rust-xfinal"
