--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust-xfinal"
-version = "0.8.11"
+version = "0.8.12"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 description = "A safe and simplely used web server framework"
@@ -12,6 +12,8 @@ repository = "https://github.com/xmh0511/rust-xfinal"
 
 [dependencies]
 rust-xfinal-macro="0.1.0"
+tera = "1.17.0"
+serde_json = "1.0.85"
 
 [dependencies.uuid]
 version = "1.1.2"
