--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,14 @@ repository = "https://github.com/xmh0511/rust-xfinal"
 rust-xfinal-macro="0.1.0"
 tera = "1.17.0"
 serde_json = "1.0.85"
+jwt = "0.16.0"
+hmac = "0.12.1"
+sha2 = "0.10.3"
+hex-literal = "0.3.4"
+expedite = "0.1.0"
+chrono = "0.4.22"
+chrono-tz = "0.6.3"
+multimap = "0.8.3"
 
 [dependencies.uuid]
 version = "1.1.2"
