--- a/crates/xfinal/Cargo.toml
+++ b/crates/xfinal/Cargo.toml
@@ -23,7 +23,7 @@ chrono-tz = "0.6.3"
 multimap = "0.8.3"
 base64 = "0.13.0"
 sha1 = "0.10.5"
-xfinal-macro = {path = "../macros", optional=true}
+xfinal-macro = {path = "../macros", optional=true, version="0.1.2"}
 
 [dependencies.uuid]
 version = "1.1.2"
